fixed alignment and sorting started

--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,13 @@ button:focus {
 .arrayContainer {
   position: absolute;
   bottom: 100px;
-  left: 120px;
+  left: 15%;
+}
+
+.middle2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sortingVisualizer .bar {
@@ -115,9 +121,10 @@ button:focus {
 
 .algorithmInfo {
   position: absolute;
-  bottom: 10px;
-  left: 120px;
-  width: 1400px;
+  top: 90%;
+  bottom: 0%;
+  left: 0%;
+  width: 1425px;
   height: 70px;
   /* border: 5px solid #6495ed; */
   /* color: black; */
